# pi5-eink-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: wiring.md
scripts/: preview.sh  run.sh  simulate.sh
src/eink_weather/: __init__.py  config.py  display.py  icons.py  main.py  sensors.py  simulator.py  weather.py
