[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi5-eink-weather"
version = "0.1.0"
description = "Raspberry Pi 5 e-ink weather and GPIO sensor dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.0.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
  "adafruit-circuitpython-dht>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pi5-eink-weather = "eink_weather.main:main"
